--- a/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.scss
@@ -101,134 +101,6 @@ input[type="file"] {
   color: red;
 }
 
-:host ::ng-deep {
-  .selected-item {
-    max-width: 100% !important;
-  }
-}
-
-.select-file-contract {
-  display: flex;
-  justify-content: space-between;
-  width : 100%;
-  .file-approve {
-    width : 100%;
-    .select-contract {
-      position: relative;
-      width: 100%;
-      input {
-        outline: none;
-        width: 100%;
-        height: 38px;
-        border-radius: 5px;
-        border: 1px solid #87CAFF;
-        padding-left: 10px;
-        cursor: pointer;
-      }
-      img {
-        cursor: pointer;
-        position: absolute;
-        top: 10px;
-        right: 25px;
-      }
-    }
-  }
-}
-
-.file-contract{
-  height: 80px;
-  border: 1px solid #87CAFF;
-  cursor: pointer;
-  padding: 10px;
-  text-align: center;
-  border-radius: 5px;
-}
-
-.form-control{
-  border: 1px solid #87CAFF;
-}
-
-button {
-  //padding: 15px;
-  border: 0px;
-  border-radius: 12px;
-  margin-bottom: 10px;
-  width: 120px;
-  height: 40px;
-  box-sizing: border-box;
-  color: white;
-  background-color: #106DB6;
-  font-size: 13px;
-}
-
-//style button
-.action-button {
-  width: 100px;
-  background: #106DB6;
-  //font-weight: bold;
-  color: white;
-  border: 0 none;
-  border-radius: 5px;
-  cursor: pointer;
-  padding: 10px 5px;
-  margin: 10px 5px;
-}
-
-.draft-button {
-  width: 100px;
-  background: #FCAF17;
-  //font-weight: bold;
-  color: white;
-  border: 0 none;
-  border-radius: 5px;
-  cursor: pointer;
-  padding: 10px 5px;
-  margin: 10px 5px;
-}
-
-.footer-infor-contract {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  .content_footer{
-    //text-align: center;
-    //margin: 10px;
-    color:#0160AE;
-    font-size: 13px;
-    font-weight: 500;
-  }
-}
-
-::ng-deep .date-picker {
-  width: 100%;
-  outline:0px;
-  .datepicker-container{
-    width: 100%;
-    input {
-      display: block !important;
-      width: 100% !important;
-      height: 38px !important;
-      padding: .375rem .75rem !important;
-      font-size: inherit !important;
-      line-height: 1.5 !important;
-      color: #495057 !important;
-      background-color: #fff !important;
-      background-clip: padding-box !important;
-      border: 1px solid #87CAFF !important;
-      border-radius: .25rem !important;
-      transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out !important;
-      outline:0px !important;
-    }
-  }
-}
-
-.error-detail{
-  font-size: inherit;
-  padding: 7px;
-  margin-top: 5px;
-  margin-bottom: 0;
-}
-
 
 .input-line {
   display: flex;
@@ -244,4 +116,29 @@ button {
   border: 0;
   width: 100%;
   outline:0px;
+}
+
+.container-img-file {
+  height: 47vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #E9F4FD;
+}
+
+.container-img-file-1 {
+  justify-content: center;
+  align-items: center;
+}
+
+.text-choose-file {
+  margin-top: 32px;
+  font-size: 18px;
+  color: #106DB6;
+}
+
+.text-support-extension {
+  margin-top: 8px;
+  color: #ED1C24;
+  font-weight: 500;
 }
