--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
@@ -10,5 +10,12 @@
       <button *ngIf="!this.datas.coordination_complete" (click)="action()" type="button" name="next" class="next action-button">{{this.datas.action_title}}</button>
     </div>
   </div>
-
+<!--  <div>-->
+<!--    <button type="button" name="next" class="next action-button" (click)="processingAuthorization()">Ủy quyền</button>-->
+<!--    <button type="button" name="next" class="next action-button" (click)="forWardContract()">Chuyển tiếp</button>-->
+<!--  </div>-->
+<!--  <div>-->
+<!--    <button  *ngIf="![1, 2].includes(datas.roleContractReceived)" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Từ chối</button>-->
+<!--    <button (click)="action()" type="button" name="next" class="next action-button">{{this.datas.action_title}}</button>-->
+<!--  </div>-->
 </div>
