--- a/src/app/main/contract/shared-batch/model/confirm-infor-contract-batch/confirm-infor-contract-batch.component.scss
+++ b/src/app/main/contract/shared-batch/model/confirm-infor-contract-batch/confirm-infor-contract-batch.component.scss
@@ -282,3 +282,15 @@
   padding: 10px 5px;
   margin: 5px 5px;
 }
+
+
+.input_text{
+  background: #EFF2F5;
+  padding: 10px;
+  border-radius: 5px;
+  min-height: 40px;
+}
+.label_item {
+  padding: 10px 0px 5px;
+  color: #5e5e5e;
+}
