--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
@@ -209,7 +209,10 @@ input[type=number] {
 .contract-determine {
   display: flex;
   align-items: center;
-  margin-bottom: 20px;
+
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
 
   .contract--content {
     display: flex;
