--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
@@ -124,7 +124,8 @@
         align-items: center;
         div {
           //padding-right: 20px;
-          width: 88px;
+          //width: 88px;
+          width: 56px;
           //font-size: 13px;
           color: #666666;
 
