--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -679,7 +679,7 @@
 <div class="container-fluid">
   <div class="contract-determine">
     <div class="col-md-1">
-      <input class="contract-total" style="width: 25px; height: 25px" type="number" [value]="data_organization.type">
+      <input class="contract-total" style="width: 25px; height: 25px" type="number" [value]="data_organization.ordering" disabled>
     </div>
     <div class="col-md-11 contract--content">
       <div class="contract__content--title">
@@ -689,9 +689,10 @@
       <div class="contract__content--participants">
         <div class="participants-border">
           <div class="label">Người xem xét</div>
-          <div class="participants--content" *ngFor="let d of is_origanzation_reviewer; let index = index">
+<!--          <div class="participants&#45;&#45;content" *ngFor="let d of is_origanzation_reviewer; let index = index">-->
+          <div class="participants--content" *ngFor="let d of getOriganzationReviewer(); let index = index">
             <input class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number"
-                   [(ngModel)]="d.ordering">
+                   [(ngModel)]="d.ordering" disabled>
             <div class="col-md-10 participants--input" style="display: flex">
               <div class="participants__name">
                 <div class="label text-color">Họ tên: *</div>
@@ -719,16 +720,17 @@
         </div>
         <div class="participants-border">
           <div class="label">Người ký</div>
-          <div class="participants--content" *ngFor="let d of this.is_origanzation_signature; let index = index">
+<!--          <div class="participants&#45;&#45;content" *ngFor="let d of this.is_origanzation_signature; let index = index">-->
+          <div class="participants--content" *ngFor="let d of getOriganzationSignature(); let index = index">
             <input class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number"
-                   [(ngModel)]="d.ordering">
+                   [(ngModel)]="d.ordering" disabled>
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label text-color">Họ tên: *</div>
                   <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" placeholder="Nhập họ và tên" [(ngModel)]="d.name">
+                    <input #abcd [id]="'signature-origanzation-' + d.ordering" type="text" placeholder="Nhập họ và tên" [(ngModel)]="d.name">
                   </div>
                 </div>
                 <div class="participants__name">
@@ -742,7 +744,7 @@
               <div class="participants--input select-text-input" style="display: flex">
                 <div class="participants__name">
                   <div class="label text-color">Loại ký: *</div>
-                  <ng-multiselect-dropdown id="contractConnect" [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
+                  <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
                                            [settings]="dropdownSignTypeSettings" [data]="signTypeList">
                     <ng-template #optionsTemplate let-item let-option="option"
                                  let-id="id" let-isSelected="isSelected">
@@ -755,7 +757,7 @@
                   </ng-multiselect-dropdown>
                 </div>
                 <div class="participants-otp">
-                  <input type="checkbox" [value]="1" [ngModel]="d.is_otp">
+                  <input type="checkbox" [value]="1" [(ngModel)]="d.is_otp">
                   <span class="label text-color">OTP</span>
                 </div>
                 <div class="participants__name">
@@ -776,22 +778,21 @@
         <div class="participants-border">
           <div class="label">Văn thư</div>
           <div class="participants--content">
-            <input class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number"
-                   [(ngModel)]="is_origanzation_document.ordering">
+            <input class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number" [(ngModel)]="getOriganzationDocument().ordering" disabled>
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label text-color">Họ tên: *</div>
                   <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" placeholder="Nhập họ và tên" [(ngModel)]="is_origanzation_document.name">
+                    <input type="text" placeholder="Nhập họ và tên" [(ngModel)]="getOriganzationDocument().name">
                   </div>
                 </div>
                 <div class="participants__name">
                   <div class="label text-color">Email: *</div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
-                    <input type="text" placeholder="Nhập Email" [(ngModel)]="is_origanzation_document.email">
+                    <input type="text" placeholder="Nhập Email" [(ngModel)]="getOriganzationDocument().email">
                   </div>
                 </div>
               </div>
@@ -800,7 +801,7 @@
                 <div class="participants-signature-type">
                   <div class="label text-color">Loại ký: *</div>
 
-                  <ng-multiselect-dropdown id="contractConnect" [(ngModel)]="is_origanzation_document.sign_type" placeholder="{{'choose' | translate }}"
+                  <ng-multiselect-dropdown [(ngModel)]="getOriganzationDocument().sign_type" placeholder="{{'choose' | translate }}"
                                            [settings]="dropdownSignTypeSettings" [data]="signTypeList">
                     <ng-template #optionsTemplate let-item let-option="option"
                                  let-id="id" let-isSelected="isSelected">
@@ -825,7 +826,7 @@
   <!--  Đối tác-->
   <div class="contract-determine" *ngFor="let item of this.data_parnter_organization" style="display: flex">
     <div class="col-md-1">
-      <input class="contract-total" style="width: 25px; height: 25px" type="number" [value]="item.ordering">
+      <input class="contract-total" style="width: 25px; height: 25px" type="number" [value]="item.ordering" disabled>
     </div>
     <div class="col-md-11 contract--content">
       <div class="contract__content--title">
@@ -846,8 +847,7 @@
         <div class="participants-border">
           <div class="label">Người điều phối</div>
           <div class="participants--content" *ngFor="let d of getPartnerCoordination(item); let index = index">
-            <input class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number"
-                   [(ngModel)]="d.ordering">
+            <input class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number" [(ngModel)]="d.ordering" disabled>
             <div class="col-md-10 participants--input" style="display: flex; margin-bottom: 14px">
               <div class="participants__name">
                 <div class="label text-color">Họ tên: *</div>
@@ -876,7 +876,7 @@
           <div class="label">Người xem xét</div>
           <div class="participants--content" *ngFor="let d of getPartnerReviewer(item); let index = index">
             <input class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number"
-                   [(ngModel)]="d.ordering">
+                   [(ngModel)]="d.ordering" disabled>
             <div class="col-md-10 participants--input">
               <div class="participants__name">
                 <div class="label text-color">Họ tên: *</div>
@@ -907,14 +907,14 @@
           <div class="label">Người ký</div>
           <div class="participants--content" *ngFor="let d of getPartnerSignature(item); let index = index">
             <input class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number"
-                   [(ngModel)]="d.ordering">
+                   [(ngModel)]="d.ordering" disabled>
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label text-color">Họ tên: *</div>
                   <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" placeholder="Nhập họ và tên" [(ngModel)]="d.name">
+                    <input  [id]="'signature-partner-' + d.ordering" type="text" placeholder="Nhập họ và tên" [(ngModel)]="d.name">
                   </div>
                 </div>
                 <div class="participants__name">
@@ -929,7 +929,7 @@
                 <div class="participants__name">
                   <div class="label text-color">Loại ký: *</div>
 
-                  <ng-multiselect-dropdown id="contractConnect" [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
+                  <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
                                            [settings]="dropdownSignTypeSettings" [data]="signTypeList">
                     <ng-template #optionsTemplate let-item let-option="option"
                                  let-id="id" let-isSelected="isSelected">
@@ -948,7 +948,7 @@
 <!--                  </mat-form-field>-->
                 </div>
                 <div class="participants-otp">
-                  <input type="checkbox" [value]="1" [ngModel]="d.is_otp">
+                  <input type="checkbox" [value]="1" [(ngModel)]="d.is_otp">
                   <span class="label text-color">OTP</span>
                 </div>
                 <div class="participants__name">
@@ -971,7 +971,7 @@
           <div class="label">Văn thư</div>
           <div class="participants--content">
             <input class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number"
-                   [(ngModel)]="getPartnerDocument(item).ordering">
+                   [(ngModel)]="getPartnerDocument(item).ordering" disabled>
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
@@ -994,7 +994,7 @@
                 <div class="participants-signature-type">
                   <div class="label text-color">Loại ký: *</div>
 
-                  <ng-multiselect-dropdown id="contractConnect" [(ngModel)]="getPartnerDocument(item).sign_type" placeholder="{{'choose' | translate }}"
+                  <ng-multiselect-dropdown [(ngModel)]="getPartnerDocument(item).sign_type" placeholder="{{'choose' | translate }}"
                                            [settings]="dropdownSignTypeSettings" [data]="signTypeList">
                     <ng-template #optionsTemplate let-item let-option="option"
                                  let-id="id" let-isSelected="isSelected">
