edit login multi

--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -18,6 +18,7 @@
       </div>
     </div>
     <div class="col-md-3">
+      <div></div>
       <div class="form-group">
         <button class="btn btn-lg btn-block">{{'btn.search' | translate }}</button>
       </div>
