--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
 @import "~bootstrap/scss/bootstrap";
 
 html, body { height: 100%; }
-body { margin: 0; font-family: font_lexend_deca , Roboto, "Helvetica Neue", sans-serif !important; }
+body { margin: 0; font-family: font_lexend_deca , Roboto, "Helvetica Neue", sans-serif !important; font-size: 13px !important;}
 
 @font-face {
   font-family: font_lexend_deca;
