--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -38,7 +38,7 @@ body, html {
 
 .bg-footer-login {
   background-image: url(../../assets/img/foot_login.svg);
-  height: 200px;
+  height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -102,4 +102,56 @@ body, html {
     font-weight: 500;
     cursor: pointer;
   }
+}
+.social-icons {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 10px;
+  border: 1px solid #C2E4FF;
+  border-radius: 5px;
+}
+.social-icons .label{
+  color: #106DB6;
+  margin-left: 10px;
+}
+.social-icons:hover {
+  background: #f3f8ff;
+}
+.dropdown-toggle::after {
+  display:none;
+}
+.drop_menu{
+  //margin-top: 22px;
+  border-color: #368ee0;
+  padding: 0;
+  font-size: inherit;
+  right: 0px;
+  left: unset !important;
+}
+.drop{
+  padding: 10px;
+  color:#106DB6;
+  min-height: 55px;
+}
+.db_user{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35px;
+  margin-right: 5px;
+}
+.db_icon_english {
+  height: 20px;
+  width: 30px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../assets/img/icon_english.svg);
+}
+.db_icon_vietnam {
+  height: 20px;
+  width: 30px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../assets/img/icon_vietnam.svg);
 }
